log/build_2023-11-15_12-55-07/gui_window/stderr.log
  File "/home/urc/new_GUI/install/gui_window/lib/python3.10/site-packages/gui_window/urc_gui_common/widgets/map_viewer.py", line 88
    		})
    		 ^
SyntaxError: unmatched ')'

